--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1763,6 +1763,14 @@ footer {
   max-width: 315px;
   width: 100%; }
 
+.project-col {
+  display: none; }
+  .project-col:nth-child(-n+10) {
+    display: block; }
+
+.blog-col:nth-child(-n+20) {
+  display: block; }
+
 .product-description-box__body {
   height: 100%;
   line-height: 24px;
@@ -2791,7 +2799,88 @@ footer {
     padding: 8px 16px 16px; }
     .sidebar-box .reviews-box__body h3 {
       font-size: 16px;
-      margin: 0 0 8px; }
+      margin: 0 0 8px;
+      color: #4B5257; }
+
+.blog-card {
+  width: 100%;
+  -webkit-box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
+          box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
+  border-radius: 8px;
+  background: #fff;
+  overflow: hidden;
+  height: 100%; }
+  .blog-card__img {
+    width: 100%;
+    height: 208px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    overflow: hidden; }
+    .blog-card__img img {
+      width: 100%;
+      height: 100%;
+      -o-object-fit: cover;
+         object-fit: cover; }
+  .blog-card__body {
+    padding: 16px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    height: calc(100% - 208px); }
+  .blog-card .reviews-box__header {
+    padding: 0;
+    margin: 0 0 16px; }
+  .blog-card .reviews-box__avatar {
+    width: 40px;
+    height: 40px;
+    min-width: 40px; }
+  .blog-card .info-post {
+    margin: 0 0 8px; }
+  .blog-card__name {
+    font-size: 20px;
+    color: #4B5257;
+    font-weight: 600; }
+    .blog-card__name:hover {
+      color: #ED6D43; }
+  .blog-card__content {
+    margin: 0 0 8px; }
+  .blog-card .reviews-box__footer {
+    padding: 10px 0;
+    background: transparent;
+    margin: auto 0 0; }
+  .blog-card .list-share {
+    font-size: 16px;
+    font-weight: 500; }
+    .blog-card .list-share li a {
+      color: #4B5257; }
+    .blog-card .list-share .list-share__icon {
+      width: 20px;
+      height: 20px;
+      fill: #6C757D; }
+  .blog-card .section-letters__box-photo-default {
+    border-width: 2px;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end; }
+    .blog-card .section-letters__box-photo-default img {
+      max-width: 25px;
+      -o-object-fit: contain;
+         object-fit: contain;
+      height: auto; }
 
 /*==========  Desktop First  ==========*/
 /* Large Devices, Wide Screens */
@@ -2977,7 +3066,9 @@ footer {
   .sidebar-box {
     margin: 0 0 32px; }
     .sidebar-box:last-child {
-      margin: 0; } }
+      margin: 0; }
+  .blog-page .btn-load {
+    margin: 0 auto 32px; } }
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width: 635px) {
