--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -242,6 +242,10 @@
     &:last-child
       margin: 0
 
+  .blog-page
+    .btn-load
+      margin: 0 auto 32px
+
 /* Extra Small Devices, Phones */
 @media only screen and (max-width: 635px)
   .search-dropdown
