--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -534,6 +534,9 @@
     max-width: 290px
     height: 290px
 
+  .registration-form
+    padding: 15px
+
 /* Custom, iPhone Retina */
 @media only screen and (max-width: 320px)
   /**/
