--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -481,19 +481,22 @@ h2
 .checkbox
   width: 100%
   display: flex
-  align-items: center
+  align-items: flex-start
   color: #6C757D
   font-family: $font
   cursor: pointer
+  a
+    color: #0B0C0D
+    display: inline
 
-.checkbox-inp
+.checkbox-inp, .radio-inp
   display: none
 
 .checkbox-custom
   width: 13px
   height: 13px
   min-width: 13px
-  margin: 0 8px 0 0
+  margin: 4px 8px 0 0
   background: #F7F8FA
   border: 1px solid #EBEEF2
     radius: 2px
@@ -517,6 +520,158 @@ h2
   border-color: $accent
   &:before
     opacity: 1
+
+.radio
+  width: 100%
+  display: flex
+  align-items: center
+  color: #6C757D
+  font-weight: 500
+  cursor: pointer
+
+.radio-custom
+  width: 13px
+  height: 13px
+  min-width: 13px
+  background: #ffffff
+  border: 1px solid #EBEEF2
+    radius: 50%
+  position: relative
+  transition: .3s ease
+  margin: 0 8px 0 0
+
+.radio-inp:checked + .radio-custom
+  background: $accent
+  border-color: $accent
+
+.ui-widget.ui-widget-content
+  padding: 16px
+  border: none
+    radius: 0
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15)
+  background: #fff
+
+
+.ui-datepicker
+  width: auto
+  .ui-datepicker-header
+    padding: 0
+    background: transparent
+    border: none
+      radius: 0
+    color: #6C757D
+    font-size: 16px
+    font-family: $font
+    display: flex
+    align-items: center
+  .ui-datepicker-prev, .ui-datepicker-next
+    position: relative
+    width: 40px
+    height: 40px
+    order: 1
+    display: flex
+    align-items: center
+    justify-content: center
+    right: 0
+    left: 0
+    top: 0
+    border: none
+      radius: 0
+    cursor: pointer
+    span
+      width: 9px
+      height: 18px
+      margin: 0
+      position: relative
+      left: 0
+      top: 0
+      right: 0
+      transform: none
+  .ui-datepicker-prev
+    span
+      background: url("../img/left.svg") no-repeat center
+        size: contain
+  .ui-datepicker-next
+    margin: 0 0 0 4px
+    span
+      background: url("../img/right.svg") no-repeat center
+        size: contain
+  .ui-datepicker-title
+    margin: 0 auto 0 0
+    display: flex
+    align-items: center
+    select
+      padding: 8px 28px 8px 12px
+      margin: 0 4px 0 0
+      width: fit-content
+      color: #6C757D
+      font-family: $font
+      background: #F7F8FA url("../img/select.svg") no-repeat 87% center
+        size: 10px
+      border-radius: 4px
+      font-weight: normal
+      &:last-child
+        margin: 0
+  th
+    font-size: 12.8px
+    color: #CFD2D5
+    font-family: $font
+    padding: 5px
+    width: 40px
+    height: 40px
+    vertical-align: middle
+  td
+    padding: 0
+    width: 40px
+    height: 40px
+    a, span
+      width: 100%
+      height: 100%
+      border: none
+      display: flex
+      align-items: center
+      justify-content: center
+      position: relative
+
+
+.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default, .ui-button, html .ui-button.ui-state-disabled:hover, html .ui-button.ui-state-disabled:active
+  border: none
+  padding: 0
+  background: transparent
+
+.ui-state-highlight, .ui-widget-content .ui-state-highlight, .ui-widget-header .ui-state-highlight
+  color: #4B5257
+
+.ui-widget-content .ui-state-highlight
+  &:before
+    content: ''
+    position: absolute
+    left: 50%
+    transform: translate(-50%,0)
+    background: #D64017
+    width: 4px
+    height: 4px
+    border-radius: 50%
+    bottom: 3px
+
+
+.form-item
+  width: 100%
+  display: flex
+  align-items: center
+  flex-wrap: wrap
+  .input-title
+    width: auto
+    margin: 0 16px 0 0
+
+.list-radio
+  display: flex
+  align-items: center
+  flex-wrap: wrap
+  li
+    margin: 0 16px 0 0
+    &:last-child
+      margin: 0
 
 .list-category-project
   li
@@ -555,5 +710,6 @@ h2
 @import "modal"
 @import "project"
 @import "project-page"
+@import "registration"
 @import "media"
 // Всегда в конце
