--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -49,7 +49,12 @@
   .product-description-box-max .mb-154
     margin-bottom: 5px
 
+  .rating-scale-stairs__elem
+    width: 11px
+    padding: 0
 
+  .rating-scale-values__box
+    left: -6.5px
 
 /* Medium Devices, Desktops */
 @media only screen and (max-width: 992px)
@@ -91,6 +96,9 @@
 
   .comments-box-answer:after
     left: -28px
+
+  .rating-scale-stairs__step
+    font-size: 14px
 
 /* Small Devices, Tablets */
 @media only screen and (max-width: 768px)
@@ -246,6 +254,28 @@
     .btn-load
       margin: 0 auto 32px
 
+  .user-information__photo
+    margin: 0 0 -40px 55px
+
+  .user-information__body
+    display: flex
+    align-items: flex-start
+    justify-content: space-between
+    padding: 40px 15px 24px
+
+  .user-information__head
+    width: 33.3%
+
+  .user-rating
+    width: 66.6%
+
+  .rating-scale-stairs__step
+    font-size: 16px
+
+  .tab-content h3
+    font-size: 32px
+    margin: 0 0 24px
+
 /* Extra Small Devices, Phones */
 @media only screen and (max-width: 635px)
   .search-dropdown
@@ -256,6 +286,78 @@
 
   .img-absolute
     min-width: 580px
+
+  .rating-scale-wrapper
+    padding: 0 100px 0 80px
+    max-width: 265px
+    margin: 0 auto
+
+  .rating-scale-stairs
+    flex-direction: column
+    align-items: center
+    max-width: 82px
+    flex-wrap: nowrap
+    margin: 0 auto
+
+  .rating-scale-stairs__step
+    width: 100%
+    height: 47px
+    text-align: center
+    padding: 4px
+    &:first-child
+      border-radius: 8px 8px 0 0
+    &:last-child
+      border-radius: 0 0 8px 8px
+
+  .rating-scale-stairs__step2
+    background: linear-gradient(180deg, #5AED78 1.39%, #249DDF 101.39%)
+
+  .rating-scale-stairs__step3
+    background: linear-gradient(180deg, #249DDF 0%, #ED3751 100%)
+
+  .rating-scale-stairs__step4
+    background: linear-gradient(180deg, #ED3751 1.39%, #ED6D43 101.39%)
+
+  .rating-scale-stairs__elem
+    width: 100%
+    height: 11px
+    &:before
+      width: 100%
+      height: 1px
+      top: 50%
+      transform: translate(0,-50%)
+      left: 0
+
+  .text-pc
+    display: none
+
+  .text-mobile
+    display: block
+
+  .rating-marker
+    left: 0
+    right: auto
+    bottom: 20%
+    display: flex
+    flex-direction: column
+    align-items: flex-end
+    justify-content: flex-end
+
+  .rating-marker-photo
+    margin: 0 0 0 2px
+    transform: rotate(-90deg)
+    .img
+      transform: rotate(90deg)
+
+  .rating-scale-values__box
+    margin: 0 0 0 4px
+    top: -4px
+    left: calc(100% + 4px)
+    border: none
+      top: 1px solid #EBEEF2
+    width: 100px
+    text-align: left
+    padding: 8px 0 0
 
 @media only screen and (max-width: 575px)
   .nav-footer
@@ -537,11 +639,34 @@
   .registration-form
     padding: 15px
 
-/* Custom, iPhone Retina */
-@media only screen and (max-width: 320px)
-  /**/
+  .user-information__body
+    flex-direction: column
+    align-items: center
+    padding: 40px 16px 24px
 
+  .user-information__photo
+    margin: 0 auto -40px
 
+  .tab-content
+    padding: 32px 0 0
+    h3
+      margin: 0 0 32px
+    .registration-form .select
+      padding: 0 25px 0 12px
+
+  .add-photo
+    display: flex
+    justify-content: flex-start
+    align-items: center
+
+  .box-avatar
+    margin: 0 16px 0 0
+
+  .settings-box .label-file
+    margin: 0
+
+  .user-information__head, .user-rating
+    width: 100%
 
 @media (min-width: 576px)
   .container, .container-sm
